--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@ body{
   /*border: grey solid;*/
 }
 
+.title{
+  color: #17A2B8;
+}
+
 
 .json-reader {
   padding: 25px;
@@ -31,6 +35,11 @@ body{
   line-height: 0.5 !important;
   margin-bottom: 7px;
   margin-left: -24px;
+  border: none;
+  -webkit-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  transform: scale(0.8);
   /* position: absolute !important; */
 }
 
